--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nuxt-ts",
-    "build": "cross-env NODE_ENV=production nuxt-ts build --verbose",
+    "build": "cross-env NODE_ENV=production nuxt-ts build",
     "start": "cross-env NODE_ENV=production nuxt-ts start",
     "postinstall": "patch-package"
   },
