activate privacy policy in markdown

--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,6 @@ LOGGING=true
 ENVIRONMENT=development
 SENTRY_DSN=
 TERMS_OF_USE_MD_URL=
-PRIVACY_POLICY_MD_URL=
+PRIVACY_POLICY_MD_URL=/markdown/PrivacyPolicy.md
 COMMUNITY_GUIDELINES_MD_URL=
 HCAPTCHA_SITE_KEY=10000000-ffff-ffff-ffff-000000000001
