--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nuxt-ts",
-    "build": "cross-env NODE_ENV=production nuxt-ts build",
+    "build": "NODE_ENV=production nuxt-ts build",
     "start": "NODE_ENV=production nuxt-ts start",
     "postinstall": "patch-package"
   },
